Add Hero and Footer Components

--- a/src/index.css
+++ b/src/index.css
@@ -160,10 +160,9 @@ label {
 }
 
 /* Modal content custom styling */
-.modal-content {
- 
-
-}
+/* .modal-content {
+  
+} */
 
 .bot-modal-hda {
   display: flex;
