--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,9 @@ code {
 
 
 /* container div */
+/* .bot-container{
+  border: 1px solid blue;
+} */
 .navbar-brand {
   color: #d65693; 
   font-weight: bold;
@@ -104,7 +107,7 @@ label {
 
 .display-bots {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   gap: 15px;
   margin-top: 30px;
