add NavLinks to Navbar and style
  - import NavLink from react-router-dom
  - replace <a> with NavLinks
  - point <a> href to NavLink's 'to' to respective paths;
  Home, Favorites & Army
  - style Navbar to position sticky, top 0 to always stick on top on scoll

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,12 @@ code {
 /* .bot-container{
   border: 1px solid blue;
 } */
+
+.navbar {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
 .navbar-brand {
   color: #d65693; 
   font-weight: bold;
