--- a/src/index.css
+++ b/src/index.css
@@ -152,6 +152,15 @@ label {
   margin-top: 30px;
   margin-bottom: 30px;
 }
+
+.favorites {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 15px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
 .card {
   width: 250px;
   /* background-color: #64686C; */
