create addToArmy func in Pages for Army
    Pages:
        - addToArmy func for enlisting bots to the army

        - receives bot as argument

        - update army state

        - pass addToArmy func prop to BotCollection

        - pass army prop to Army

    BotCollection:
        - receive addToArmy prop from Pages

        - add onClick event on Enlist button, preventDefault,
        and call addToArmy

    Army:
        - receive army prop from Pages

        - map and destructure bots by id, name, health, damage, armor,
        bot_class, catchphrase, and avatar_url to create cards

    Favorites:
        - refactor cards to show bot specs: health, damage, armor.

    Style Army cards div to flex-start

--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,10 @@ code {
   color: #fff;
 }
 
+.login svg {
+  margin-right: 3px;
+}
+
 #carouselExampleAutoplaying {
   /* Set the height of the carousel container as needed */
   height: 500px; /* Adjust this value to fit your design */
@@ -153,14 +157,24 @@ label {
   margin-bottom: 30px;
 }
 
-.favorites {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 15px;
-    margin-top: 30px;
-    margin-bottom: 30px;
+.favorites, .army {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 15px;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
+
+.army {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 15px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
 .card {
   width: 250px;
   /* background-color: #64686C; */
